--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Drawing Basics</h1>
+    <h1>drawing basics</h1>
 
     <!-- Add a Canvas Element -->
 
